--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.0",
-    "twilio": "^5.3.4"
+    "twilio": "^5.3.4",
+    "whatsapp-bot": "file:"
   }
 }
